Add setuptool config

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,30 @@
 [tool.black]
 line-length = 88
 target-version = ['py38']
+
+[project]
+name = "woopymodels"
+version = '1.0.0'
+dependencies = [
+  'pydantic > 1.10.0',
+  'importlib-metadata; python_version<"3.8"',
+]
+authors = [
+  {name = "Tan Le"},
+]
+description = "pydantic models for Woocommerce Rest Api"
+requires-python = ">=3.8"
+
+[project.optional-dependencies]
+dev = [
+  'flake8>=6',
+  'pytest>=7.2.2',
+]
+
+[build-system]
+requires = ["setuptools", "setuptools-scm"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools.packages.find]
+where = ["woopymodels"]
+exclude = ["tests"]
